tests/fixtures/errors/e0002_duplicate_file_enum.mimz
// expect: E0002
enum S { A, B }
enum S { C }
module M {
  out y: bit
  y = 0
}
